# ollama-khonliang

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: copilot-review.instructions.md
.github/workflows/: ci.yml  claude.yml  release.yml
.trunk/: trunk.yaml
docs/: architecture.md  consensus.md  context-compression.md  gateway-and-agents.md  getting-started.md  knowledge.md  llm-manager.md  mcp-server.md  model-routing.md  multi-backend.md  parsing.md  repo-hygiene-audit.md  research.md  roles-and-routing.md  training.md
examples/genealogy_reports/: main.py
examples/helpdesk_bot/: main.py  roles.py  router.py  tests.jsonl
examples/home_network/: main.py  roles.py  router.py  scanner.py
milestones/KH-15/: milestone.md
specs/KH-15/: spec.md
src/khonliang/: __init__.py  __main__.py  _json_utils.py  cli.py  client.py  errors.py  health.py  openai_client.py  personalities.py  pool.py  protocols.py
src/khonliang/agents/: __init__.py  activation.py  capabilities.py  channels.py  envelope.py  registry.py
src/khonliang/consensus/: __init__.py  credit.py  engine.py  models.py  outcomes.py  team.py  vocabulary.py  weights.py
src/khonliang/conversation/: __init__.py  manager.py  models.py
src/khonliang/debate/: __init__.py  adjudicator.py  orchestrator.py  pipeline.py
src/khonliang/digest/: __init__.py  middleware.py  store.py  synthesizer.py
src/khonliang/discovery/: __init__.py  mdns.py
src/khonliang/gateway/: __init__.py  blackboard.py  gateway.py  messages.py  observer.py  (+1 more)
tests/: test_artifacts.py  test_base_role.py  test_budget.py  test_capabilities.py  test_compact.py  test_compress.py  test_consensus.py  test_consensus_credit.py  test_consensus_outcomes.py  test_conversation.py  test_credit.py  test_debate_gra.py  test_digest.py  test_distillation.py  test_health.py  test_knowledge.py  test_llm_manager.py  test_mcp_server.py  test_model_router.py  test_openai_client.py  test_protocols.py  test_reporting.py  test_research.py  test_task_router.py
(+57 files in other folders)
