[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-khonliang"
version = "0.6.1"
description = "A llama rancher — multi-agent LLM orchestration framework for Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "ollama",
  "llm",
  "agents",
  "multi-agent",
  "orchestration",
  "consensus",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["aiohttp>=3.9", "requests>=2.31"]

[project.optional-dependencies]
rag = ["fastembed>=0.2", "semantic-router>=0.0.47"]
mattermost = ["websocket-client>=1.7"]
gateway = ["redis>=5.0"]
discovery = ["zeroconf>=0.131"]
mcp = ["mcp>=1.26"]
reporting = ["flask>=3.0", "markdown>=3.5", "nh3>=0.2"]
all = [
  "fastembed>=0.2",
  "semantic-router>=0.0.47",
  "websocket-client>=1.7",
  "redis>=5.0",
  "zeroconf>=0.131",
  "mcp>=1.26",
  "flask>=3.0",
  "markdown>=3.5",
  "nh3>=0.2",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
khonliang = "khonliang.cli:main"

[project.urls]
Homepage = "https://github.com/tolldog/ollama-khonliang"
Repository = "https://github.com/tolldog/ollama-khonliang"
Documentation = "https://github.com/tolldog/ollama-khonliang/tree/main/docs"
Issues = "https://github.com/tolldog/ollama-khonliang/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["khonliang*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
